CB-19546 Populate ScalingActivities at various points of an autoscale operation  - ScalingActivityService creates records of scalingActivites during YARN and CB invocations with appropriate messages and ActivityStatuses for success and failure  - New UpdateMonitor will query the FlowEndpoint every 10 mins to retrieve flow status and populate the endTimes as well as translate the failed/successful flows into corresponding ActivityStatuses
Testing
 - Coverage extended for ScalingRequest to include regular and stop start downscale scenairos
 - Added UTs and ParameterizedTests for UpdateMonitor and ActivityUpdateEvaluator respectively
 - UTs added for FlowCommunicator to test usage of remainingFlowIds to query CB

--- a/autoscale-api/src/main/resources/messages/messages.properties
+++ b/autoscale-api/src/main/resources/messages/messages.properties
@@ -33,3 +33,22 @@ autoscale.notification.history.update=Autoscaling History Updated
 autoscale.notification.config.update=Autoscaling Config Updated
 
 autoscale.trigger.failure=Autoscaling Trigger Failed. Autoscaling metrics collection via user: ''{0}'' failed.
+
+autoscale.yarn.recommendation.success=Successfully polled YARN to fetch cluster metrics. YarnRecommendedScaleUpCount: ''{0}'', YarnRecommendedDecommission: {1}, DeterminedScaleUpCount (based on step-size and maxAllowedUpscale): ''{2}'', DeterminedDecommissionHosts (based on step-size and maxAllowedDownscale): {3}. 
+autoscale.yarn.recommendation.failure=Failed to fetch cluster metrics due to {0}
+
+autoscale.upscale.trigger.success=Successfully triggered cluster scale-up of ''{0}'' node(s) with ''{1}'' scaling adjustment.
+autoscale.downscale.trigger.success.node.list=Successfully triggered cluster scale-down of the following node(s): {0}, with ''{1}'' scaling adjustment.
+autoscale.downscale.trigger.success=Successfully triggered cluster scale-down of the ''{0}'' node(s).
+
+autoscale.upscale.trigger.failure=Failed to trigger cluster scale-up due to the following exception: {0}. Reason: ''{1}''
+autoscale.downscale.trigger.failure=Failed to trigger cluster scale-down due to the following exception: {0}. Reason: ''{1}''
+
+autoscale.time.based.upscale=Initiating cluster scale-up of ''{0}'' node(s) based on the defined schedule.
+autoscale.time.based.downscale=Initiating cluster scale-down of the following node(s): {0} based on the defined schedule.
+
+autoscale.mandatory.upscale=Performing mandatory cluster scale-up of ''{0}'' node(s) with ''{1}'' scaling adjustment to conform with the autoscale policy.
+autoscale.mandatory.downscale=Performing mandatory cluster scale-down of the following node(s): {0}, with ''{1}'' scaling adjustment to conform with the autoscale policy.
+
+autoscale.scaling.flow.failure=Autoscaling flow failed for cluster. See event history for additional details.
+autoscale.scaling.activity.unknown=Autoscaling flow details not found.
