CB-20250 Support the "Cancelled" datalake backup state

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -617,6 +617,7 @@ datalake.backup.in.progress=Datalake backup in progress.
 datalake.backup.validation.in.progress=Datalake backup validation in progress.
 datalake.restore.in.progress=Datalake restore in progress.
 datalake.backup.finished=Datalake backup is complete.
+datalake.backup.cancelled=Datalake backup was cancelled.
 datalake.backup.validation.finished=Datalake backup validation complete.
 datalake.restore.finished=Datalake restore is complete.
 datalake.backup.failed=Datalake backup failed. Reason: {0}
