CB-20769 Propagate additional autoscale trigger failed details to event history

--- a/autoscale-api/src/main/resources/messages/messages.properties
+++ b/autoscale-api/src/main/resources/messages/messages.properties
@@ -32,4 +32,4 @@ autoscale.validation.time.negative.adjustment=Schedule-Based Autoscaling Node Co
 autoscale.notification.history.update=Autoscaling History Updated
 autoscale.notification.config.update=Autoscaling Config Updated
 
-autoscale.trigger.failure=Autoscaling Trigger Failed. Autoscaling metrics collection from cluster failed.
+autoscale.trigger.failure=Autoscaling Trigger Failed. Autoscaling metrics collection via user: ''{0}'' failed.
