CB-20945: Fixed SDX resize bug with CCMv1 setups where SSH tunneling key cannot be updated.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -642,6 +642,7 @@ datalake.recovery.teardown.finished=Datalake stack tear-down for recovery comple
 datalake.recovery.started=Datalake recovery started.
 datalake.resize.triggered=Datalake resize initiated.
 datalake.resize.complete=Datalake resize complete.
+datalake.resize.failure.restore=Datalake resize failed during restore. Please attempt the restore again manually and then manually delete the original detached datalake. You can find its name in the event history.
 
 datalake.datahub.refresh.in.progress=Datahub refresh in progress
 datalake.datahub.refresh.failed=Datahub refresh failed. Reason: {0}
