CB-20889: Improve rolling upgrade related event messages
In this commit I improved some event messages to see what kind of upgrade do we started.
I introduced separate message for:
- calling rolling upgrade command on CM
- regular OS upgrade
- rolling OS upgrade
- rolling runtime upgrade for DL cluster

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -332,8 +332,9 @@ stack.sync.versions.from.cm.to.db.failed=Reading CM and active parcel versions f
 stack.sync.instance.updated=Updated metadata of instance {0} to {1} as the cloud provider reported it as {1}.
 stack.sync.instance.failed=Updated metadata of instance {0} to failed, because update was in progress, but instance isn''t member of the cluster.
 
-datalake.upgrade=Upgrade process initiated, target image id is {0}.
-datalake.upgrade.preparation=Upgrade preparation process initiated, target image id is {0}.
+datalake.upgrade=Upgrade process initiated for runtime {0}, the target image id is: {1}.
+datalake.rolling.upgrade=Rolling upgrade process initiated for runtime {0}, the target image id is: {1}.
+datalake.upgrade.preparation=Upgrade preparation process initiated for runtime {0}, target image id is {1}.
 datalake.upgrade.could.not.start=Upgrade process could not be started due to the following reason: {0}
 datalake.ccm.upgrade=Cluster Connectivity Manager upgrade initiated.
 datalake.ccm.upgrade.error.environment.notlatest=Invalid state: environment {0} is not upgraded to the latest Cluster Connectivity Manager yet.
@@ -377,6 +378,7 @@ cluster.upgrade.download.parcel=Downloading the new parcel
 cluster.upgrade.distribute.parcel=Distributing the new parcel
 cluster.upgrade.activate.parcel=Activating the new parcel
 cluster.upgrade.start.upgrade=Calling upgrade on Runtime
+cluster.upgrade.start.rolling.upgrade=Calling rolling upgrade on Runtime
 cluster.upgrade.start.post-upgrade=Calling post upgrade on Runtime
 cluster.upgrade.validation.started=Cluster upgrade validation started
 cluster.upgrade.validation.finished=Cluster upgrade validation finished
@@ -445,7 +447,10 @@ resource.sdx.update_lb_dns.failed=Update of load balancer DNS for datalake faile
 resource.sdx.validation.skipped=Datalake object storage validation skipped. Reason: {0}.
 resource.sdx.validation.failed=Datalake object storage validation failed. Reason: {0}.
 resource.sdx.change.image.started=Datalake change image flow started.
+resource.sdx.datalake.os.upgrade.started=Datalake OS upgrade flow started.
+resource.sdx.datalake.rolling.os.upgrade.started=Datalake rolling OS upgrade flow started.
 resource.sdx.datalake.upgrade.started=Datalake upgrade flow started.
+resource.sdx.datalake.rolling.upgrade.started=Datalake rolling upgrade flow started.
 resource.sdx.datalake.upgrade.preparation.started=Datalake upgrade preparation flow started.
 resource.sdx.datalake.upgrade.finished=Datalake upgrade flow finished.
 resource.sdx.datalake.upgrade.preparation.finished=Datalake upgrade preparation flow finished.
