CB-21288 Send message to event history indicating initial upscale adjustment for faster autoscaling

--- a/autoscale-api/src/main/resources/messages/messages.properties
+++ b/autoscale-api/src/main/resources/messages/messages.properties
@@ -32,6 +32,8 @@ autoscale.validation.time.negative.adjustment=Schedule-Based Autoscaling Node Co
 autoscale.notification.history.update=Autoscaling History Updated
 autoscale.notification.config.update=Autoscaling Config Updated
 
+autoscale.stopstart.initial.upscale.adjustment=Adjusting cluster to max node count of ''{0}'' nodes for HostGroup ''{1}'' based on the autoscale policy.
+
 autoscale.trigger.failure=Autoscaling Trigger Failed. Autoscaling metrics collection via user: ''{0}'' failed.
 
 autoscale.yarn.recommendation.success=Successfully polled YARN to fetch cluster metrics. YarnRecommendedScaleUpCount: ''{0}'', YarnRecommendedDecommission: {1}, DeterminedScaleUpCount (based on step-size and maxAllowedUpscale): ''{2}'', DeterminedDecommissionHosts (based on step-size and maxAllowedDownscale): {3}. 
