--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -330,6 +330,7 @@ stack.sync.instance.deleted.cbmetadata=Deleted instance {0} from Cloudbreak meta
 stack.sync.instance.deletedbyprovider.cbmetadata=Deleted instance {0} from Cloudbreak metadata because it was deleted by the cloud provider.
 stack.sync.versions.from.cm.to.db.succeeded=Reading CM and active parcel versions from CM server succeeded: {0}
 stack.sync.versions.from.cm.to.db.failed=Reading CM and active parcel versions from CM server has failure(s): {0}
+stack.sync.versions.from.cm.to.db.missing.versions=Please check the following node(s) as they could not report CM version: {0}
 stack.sync.instance.updated=Updated metadata of instance {0} to {1} as the cloud provider reported it as {1}.
 stack.sync.instance.failed=Updated metadata of instance {0} to failed, because update was in progress, but instance isn''t member of the cluster.
 
